add new file somthing...

--- a/buoi1/css/style.css
+++ b/buoi1/css/style.css
@@ -6,7 +6,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .container {
@@ -58,6 +58,7 @@ main section h2 {
 
 main section p {
   line-height: 25px;
+  text-align: justify;
   margin-bottom: 20px;
 }
 /*# sourceMappingURL=style.css.map */
