--- a/buoi1/css/style.scss
+++ b/buoi1/css/style.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .container {
@@ -47,6 +47,7 @@ main {
     }
     p {
       line-height: 25px;
+      text-align: justify;
       margin-bottom: 20px;
     }
   }
