--- a/buoi1/css/style.css
+++ b/buoi1/css/style.css
@@ -16,14 +16,26 @@ html {
 
 header, footer {
   width: 600px;
-  height: 100px;
+  height: 150px;
   background: #999;
-  line-height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 header h2, footer h2 {
-  text-align: center;
   color: #fff;
+}
+
+header {
+  background-size: cover;
+  background-image: url(../images/vecteezy_long-banner-background_en0421_generated.jpg);
 }
 
 main {
@@ -43,6 +55,11 @@ main article a {
   color: #fff;
   display: block;
   margin-bottom: 15px;
+  text-decoration: none;
+}
+
+main article a:hover {
+  text-decoration: underline;
 }
 
 main section {
