--- a/buoi1/css/style.scss
+++ b/buoi1/css/style.scss
@@ -15,13 +15,19 @@ html {
 
 header, footer {
   width: 600px;
-  height: 100px;
+  height: 150px;
   background: #999;
-  line-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   h2 {
-    text-align: center;
+    
     color: #fff;
   }
+}
+header {
+  background-size: cover;
+  background-image: url(../images/vecteezy_long-banner-background_en0421_generated.jpg);
 }
 
 main {
@@ -35,6 +41,10 @@ main {
       color: #fff;
       display: block;
       margin-bottom: 15px;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
   section {
