--- a/buoi1/css/style.scss
+++ b/buoi1/css/style.scss
@@ -52,6 +52,8 @@ main {
     height: 500px;
     background: #f9f9f9;
     padding: 20px;
+    background: url(../images/wall.jpg);
+    color: #fff;
     h2 {
       margin-bottom: 30px;
     }
